--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
             <version>1.4.6.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+            <version>1.1.0.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
